<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Zong"
        android:textSize="@dimen/t_size_medium"
        android:layout_marginLeft="@dimen/m_left"
        android:fontFamily="@font/ssbold"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/l_height"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/mm_left"
        android:layout_marginRight="@dimen/mm_right"
        android:background="@drawable/search_background_design"
        android:gravity="center"
        android:padding="@dimen/padding"
        >
        <ImageView
            android:layout_width="@dimen/img_view"
            android:layout_height="@dimen/img_view"
            android:src="@drawable/search_icon"
            android:contentDescription="@string/app_name"
            app:tint="@color/color_search_icon"
            />
        <EditText
            android:id="@+id/findingSong"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/search_song"
            android:textSize="@dimen/text_small_15"
            android:background="@null"
            android:textColorHint="@color/colorHintText"
            android:layout_marginLeft="@dimen/m_left_15"
            android:textColor="@android:color/white"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="text"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/albums"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/m_left"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/m_top"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategory"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_height="@dimen/image_height_small"
        android:orientation="horizontal"
        tools:listitem="@layout/category_album_items" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_lists"
        android:textColor="@android:color/white"
        android:textStyle="normal"
        android:layout_marginLeft="@dimen/m_left"
        android:textSize="15sp"
        android:layout_marginTop="@dimen/m_top"
        />

    <LinearLayout
        android:id="@+id/llMusicList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:padding="20dp"
        android:background="@drawable/music_list_background"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</LinearLayout>